Simple task to display text is the guess is right

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Hello World!</p>
+   <!-- <div id="result">
+        <h2>Hello World!</h2>
+        <div class="second">
+            <p>Paragraph 2</p>
+            <h2>Heading</h2>
+        </div>
+   </div> -->
+   <div class="form-container">
+    <form action="" method="post" id="form">
+        <div class="text">
+            <p>Good Morning</p>
+        </div>
+        <input type="text" name="" id="text">
+        <button id="btn">Go on</button>
+    </form>
+   </div>
+   <script src="main.js"></script>
 </body>
 </html>
